feat: implement detailed showdown results with rank/kicker card differentiation for UI highlighting